payload/force-app/main/default/objects/Payload_Field__c/Payload_Field__c.object-meta.xml
<CustomObject>
    <label>Payload Field</label>
    <nameField>
        <label>Payload Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payload Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>