payload/force-app/main/default/objects/Payload_Field__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active Flag</description>
    <inlineHelpText>Active Flag</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>