payload/force-app/main/default/objects/Payload_Field__c/fields/Cross_Object_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Cross_Object_Id_Field__c</fullName>
    <description>External ID field on the related parent object used to resolve a lookup.</description>
    <inlineHelpText>External ID field on the related parent object.</inlineHelpText>
    <label>Cross Object External ID Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>