payload/force-app/main/default/objects/Payload_Field__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>Default value that should be used as we serialize/deserialize</description>
    <inlineHelpText>Default value that should be used as we serialize/deserialize</inlineHelpText>
    <label>Default Value</label>
    <length>250</length>
    <type>Text</type>
</CustomField>