payload/force-app/main/default/objects/Payload_Field__c/fields/Grouping_Array__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Array__c</fullName>
    <description>This specifies to which grouping array this field belongs (if applicable). ONLY UTILIZED in cases where the values come from a SUB-Node/Record. Otherwise, specify the array in the path directly.</description>
    <inlineHelpText>This specifies to which grouping array this field belongs (if applicable). ONLY UTILIZED in cases where the values come from a SUB-Node/Record. Otherwise, specify the array in the path directly.</inlineHelpText>
    <label>Grouping Array</label>
    <length>255</length>
    <type>Text</type>
</CustomField>