payload/force-app/main/default/objects/Payload_Field__c/fields/Grouping_Level__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Level__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This specifies the &quot;depth&quot; (in the tree) where the information related to this field can be found. Directly on the main record = 1, on a child record = 2 and so on ...</description>
    <inlineHelpText>This specifies the &quot;depth&quot; (in the tree) where the information related to this field can be found. Directly on the main record = 1, on a child record = 2 and so on ...</inlineHelpText>
    <label>Grouping Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>