payload/force-app/main/default/objects/Payload_Field__c/fields/HTTP_GET__c.field-meta.xml
<CustomField>
    <fullName>HTTP_GET__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the current payload gen. record can be utilized during the corresponding operation.</description>
    <inlineHelpText>Specifies whether the current payload gen. record can be utilized during the corresponding operation.</inlineHelpText>
    <label>HTTP GET</label>
    <type>Checkbox</type>
</CustomField>