payload/force-app/main/default/objects/Payload_Field__c/fields/Is_Match_Key__c.field-meta.xml
<CustomField>
    <fullName>Is_Match_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the response mapping used to find the Salesforce record that must be updated.</description>
    <label>Is Match Key</label>
    <type>Checkbox</type>
</CustomField>