payload/force-app/main/default/objects/Payload_Field__c/fields/Is_Upsert_Key__c.field-meta.xml
<CustomField>
    <fullName>Is_Upsert_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the mapped Salesforce field as the key used for inbound upsert.</description>
    <label>Is Upsert Key</label>
    <type>Checkbox</type>
</CustomField>