payload/force-app/main/default/objects/Payload_Field__c/fields/JSON_Field__c.field-meta.xml
<CustomField>
    <fullName>JSON_Field__c</fullName>
    <description>Name of the Field to be mapped in the payload</description>
    <inlineHelpText>Name of the Field to be mapped in the payload</inlineHelpText>
    <label>JSON Field</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>