payload/force-app/main/default/objects/Payload_Field__c/fields/Match_Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>Match_Salesforce_Field__c</fullName>
    <label>Match Salesforce Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>