payload/force-app/main/default/objects/Payload_Field__c/fields/Message_Part__c.field-meta.xml
<CustomField>
    <fullName>Message_Part__c</fullName>
    <defaultValue>"Both"</defaultValue>
    <description>Identifies whether this mapping belongs to the outbound request, the inbound response, or both.</description>
    <label>Message Part</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Request</fullName><default>false</default><label>Request</label></value>
            <value><fullName>Response</fullName><default>false</default><label>Response</label></value>
            <value><fullName>Both</fullName><default>true</default><label>Both</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>