payload/force-app/main/default/objects/Payload_Field__c/fields/Null_to_Blank__c.field-meta.xml
<CustomField>
    <fullName>Null_to_Blank__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In the serialization, convert null value to blank string.</description>
    <inlineHelpText>In the serialization, convert null value to blank string.</inlineHelpText>
    <label>Null to Blank</label>
    <type>Checkbox</type>
</CustomField>