payload/force-app/main/default/objects/Payload_Field__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description>Specify the path if you don&apos;t want the field to be on the root of the JSON. This can also be utilized to specify an array by adding [x] at the end, where x is the depth within said array. Only use the array functionality from the Path when the multiple objects within the array all come from the same &quot;main&quot; record.</description>
    <inlineHelpText>Specify the path if you don&apos;t want the field to be on the root of the JSON. This can also be utilized to specify an array by adding [x] at the end, where x is the depth within said array. Only use the array functionality from the Path when the multiple ob</inlineHelpText>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>