payload/force-app/main/default/objects/Payload_Field__c/fields/Payload_Operation__c.field-meta.xml
<CustomField>
    <fullName>Payload_Operation__c</fullName>
    <label>Payload Operation</label>
    <referenceTo>Payload_Operation__c</referenceTo>
    <relationshipLabel>Payload Fields</relationshipLabel>
    <relationshipName>Payload_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>