payload/force-app/main/default/objects/Payload_Field__c/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <description>Field of relationship</description>
    <inlineHelpText>Field of relationship</inlineHelpText>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>