payload/force-app/main/default/objects/Payload_Field__c/fields/Render_If_Null__c.field-meta.xml
<CustomField>
    <fullName>Render_If_Null__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether this field/value pairing should be rendered into the resulting JSON if the value is null.</description>
    <inlineHelpText>Specifies whether this field/value pairing should be rendered into the resulting JSON if the value is null.</inlineHelpText>
    <label>Render If Null</label>
    <type>Checkbox</type>
</CustomField>