payload/force-app/main/default/objects/Payload_Field__c/fields/Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field__c</fullName>
    <description>Name of the field to be mapped in SFDC</description>
    <inlineHelpText>Name of the field to be mapped in SFDC</inlineHelpText>
    <label>Salesforce Field</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>