payload/force-app/main/default/objects/Payload_Field__c/fields/Target_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Name__c</fullName>
    <description>Not Utilized in the current solution</description>
    <inlineHelpText>Not Utilized in the current solution</inlineHelpText>
    <label>Target Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>