payload/force-app/main/default/objects/Payload_Field__c/fields/Target_System_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_System_Type__c</fullName>
    <description>System Type</description>
    <inlineHelpText>System Type</inlineHelpText>
    <label>Target System Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>boolean</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>decimal</fullName>
            </value>
            <value>
                <fullName>integer</fullName>
            </value>
            <value>
                <fullName>object</fullName>
            </value>
            <value>
                <fullName>string</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>