payload/force-app/main/default/objects/Payload_Field__c/fields/Transformation__c.field-meta.xml
<CustomField>
    <fullName>Transformation__c</fullName>
    <description>Used to transform a value</description>
    <inlineHelpText>Used to transform a value</inlineHelpText>
    <label>Transformation</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>